# cege

./: .clang-format  .gitignore  README.md  meson.build  run.sh
lib/: cege.hpp  context.cpp  context.hpp  lib.cpp  meson.build  texture.cpp  texture.hpp  util.cpp  util.hpp  window.cpp  window.hpp
lib/ecs/: component.cpp  component.hpp  component.ipp  constants.hpp  entity.cpp  entity.hpp  entity.ipp  event.hpp  event.ipp  scene.cpp  scene.hpp  scene.ipp  system.cpp  system.hpp  system.ipp  types.hpp
lib/sdl/: texture.cpp  texture.hpp  types.hpp  util.hpp  window.cpp  window.hpp
src/: main.cpp  meson.build
tests/: component.test.cpp  context.test.cpp  main.cpp  meson.build  scene.test.cpp  system.test.cpp  test_types.hpp
